test/programs/error-var-pattern-use-4-nested.expected
error[E007]: variable occurs more than once in pattern
./test/programs/error-var-pattern-use-4-nested.defs:1:12
   |
 1 | (def (one ($x two ($x (three $x))) four $x)
   |            ^^ use #1
./test/programs/error-var-pattern-use-4-nested.defs:1:20
   |
 1 | (def (one ($x two ($x (three $x))) four $x)
   |                    ^^ use #2
./test/programs/error-var-pattern-use-4-nested.defs:1:30
   |
 1 | (def (one ($x two ($x (three $x))) four $x)
   |                              ^^ use #3
./test/programs/error-var-pattern-use-4-nested.defs:1:41
   |
 1 | (def (one ($x two ($x (three $x))) four $x)
   |                                         ^^ use #4
help: a variable may occur at most once in a definition's pattern
