test/programs/error-var-pattern-use-4-nested.defs
(def (one ($x two ($x (three $x))) four $x)
  constructor)